# serd

./: .clang-format  .clang-tidy  .clant.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .includes.imp  .suppress.cppcheck  CMakeLists.txt  COPYING  ChangeLog  Dockerfile  INSTALL  INSTALL.md  NEWS  README  README.md  UTF-8.ttl  meson.build  meson_options.txt  serd.pc.in  serd.ttl  serd_bench.py  serd_config.h.in  waf  wscript
bindings/cpp/: .clang-tidy  meson.build  serdxx.pc.in
bindings/python/: MANIFEST.in  NEWS  README.md  conf.py  index.rst  meson.build  overview.rst  reference.rst  serd.pyx  setup.py  test_serd.py
doc/: .clang-tidy  .stylelintrc.json  Doxyfile.in  command_line_tools.rst.in  conf.py  conf.py.in  data_model.rst  footer.html  getting_started.rst  header.html  index.rst  mandoc.css  meson.build  model.rst  nodes.rst  overview.rst  overview_code.c  reading_and_writing.rst  reference.doxygen.in  serd-filter.1  serd-memory.txt  serd-pipe.1  serd-sort.1  serd-throughput.txt  serd-time.txt  serd-validate.1  serd.rst  serdi-memory.txt  serdi-throughput.txt  serdi-time.txt  serdi.1  statements.rst  stream_processing.rst  string_views.rst  style.css  summary.rst  using_serd.rst  world.rst
doc/_static/: custom.css  epubstyle.css  meson.build  model_pipeline.ipe  writer_pipeline.ipe
doc/api/: meson.build
doc/c/: .clang-tidy  Doxyfile  Doxyfile.in  index.rst  meson.build  model.rst  nodes.rst  overview.c  overview.rst  overview_code.c  reading_and_writing.rst  reference.rst  statements.rst  stream_processing.rst  string_views.rst  world.rst  wscript
doc/cpp/: .clang-tidy  Doxyfile.in  index.rst  meson.build  model.rst  nodes.rst  overview.cpp  overview.rst  reading_and_writing.rst  statements.rst  stream_processing.rst
doc/epub/: meson.build
doc/html/: meson.build
doc/man/: mandoc.css  meson.build  serd-filter.1  serd-pipe.1  serd-sort.1  serd-validate.1  serdi.1
doc/singlehtml/: meson.build
doc/site/: index.html
doc/xml/: meson.build
meson/suppressions/: meson.build
meson/warnings/: meson.build
test/: .clang-tidy  expect_string.h  failing_allocator.c  failing_allocator.h  meson.build  read_chunk_test.c  run_filter_suite.py  run_pipe_suite.py  run_pretty_suite.py  run_sort_suite.py  run_suite.py  run_test_suite.py  run_validation_test_suite.py  serd_test.c  sink_write.h  test_base.py  test_binary.c  test_byte_sink.c  test_byte_source.c  test_canon.c  test_caret.c  test_contextual.py  test_cursor.c  test_deferred_write_error.py  test_describe.c  test_empty.py  test_env.c  test_field.c  test_file_uri.c  test_filter.c  test_filter.py  test_free_null.c  test_grep.py  test_handler.c  test_log.c  test_log_level.py  test_model.c  test_multifile.py  test_node.c  test_node_syntax.c  (+28 more)
test/JSONLDTests/: meson.build
test/NQuadsTests/: meson.build
test/NTriplesTests/: meson.build
test/TriGTests/: meson.build
test/TurtleTests/: meson.build
test/bad/: bad-blank-node-label.nt  bad-trailing-garbage.nt  manifest.ttl  meson.build
test/canon/: bad-integer-leading.ttl  bad-lang-long.ttl  manifest.ttl  meson.build  test-canon.nt  test-canon.ttl
test/filter/: manifest.ttl  meson.build
test/full/: README.md  full-uris.ttl
test/good/: manifest.ttl  meson.build  pretty.trig  qualify-out.ttl  test-local-name-ends-with-dot.nt  test-long-string-one-quote.nt  test-long-string-one-quote.ttl  test-long-string-one-single-quote.nt  test-long-string-one-single-quote.ttl  test-long-string-two-quotes.nt  test-long-string-two-quotes.ttl  test-long-string-two-single-quotes.nt  test-long-string-two-single-quotes.ttl  test-utf8.nt
test/headers/: .clang-tidy  meson.build  test_headers.c
test/lax/: manifest.ttl  meson.build  test-bad-string.nq  test-bad-uri.nt  test-bad-utf8.ttl  test-lone-list.ttl
test/lint/: meson.build
test/multifile/: README.md  input2.trig  output.nq
test/pattern/: manifest.ttl  meson.build
test/prefix/: README.md  manifest.ttl  remove-prefixes.nt  remove-prefixes.ttl
test/pretty/: abbreviation.ttl  anonymous-in-list-object.ttl  anonymous-object.ttl  anonymous-subject-and-object.ttl  anonymous-subject.ttl  datatypes.ttl  empty-anonymous-object.ttl  empty-list-object.ttl  empty-list-subject-and-object.ttl  empty-list-subject.ttl  ext-named-blank.ttl  graph-abbreviation.trig  inline-blank-subject.ttl  inline-list-subject.ttl  list-object.ttl  list-subject.ttl  manifest.ttl  many-objects.ttl  meson.build  named-graph.trig  nested-list-object-with-empty-lists.ttl  nested-list-object.ttl  nested-list-subject.ttl  relative-uris.ttl
test/qualify/: README.md  qualify-in.ttl
test/root/: manifest.ttl  root-inside-base-out.ttl  root-outside-base-in.ttl  root-outside-base-out.ttl
test/serd_test_util/: __init__.py
test/sort/: GOPS.nq  GOSP.nq  GPSO.nq  GSOP.nq  GSPO.nq  OSP.nq  POS.nq  PSO.nq  SOP.nq  SPO.nq  input.trig  pretty.nq  untyped.nq
test/terse/: collection_subject.ttl  manifest.ttl  meson.build
test/validate/: bad-all-values-from.ttl  bad-anyuri.ttl  bad-cardinality-high.ttl  bad-cardinality-low.ttl  bad-cardinality.ttl  bad-class-type-undefined.ttl  bad-class-type.ttl  bad-datatype-cycle.ttl  bad-datatype-property.ttl  bad-deprecated-class.ttl  bad-deprecated-property.ttl  bad-disjoint-with.ttl  bad-domain.ttl  bad-literal-pattern.ttl  bad-literal-value-high-exclusive.ttl  bad-literal-value-high-inclusive.ttl  bad-literal-value-low-exclusive.ttl  bad-literal-value-low-inclusive.ttl  bad-literal-value.ttl  bad-object-property.ttl  bad-pattern.ttl  bad-plain-literal.ttl  bad-predicate-type-undefined.ttl  bad-predicate-type.ttl  bad-range-instance-not-literal.ttl  bad-range-instance.ttl  bad-range-literal-not-instance.ttl  bad-range-literal.ttl  bad-some-values-from.ttl  bad-string-literal-value-high.ttl  bad-string-literal-value-low.ttl  bad-subclass-cycle.ttl  bad-subproperty-cycle.ttl  bad-superclass-restriction.ttl  bad-union-of.ttl  (+12 more)
tools/: .clang-tidy  console.c  console.h  console_log.c  console_log.h  meson.build  serd-filter.c  serd-pipe.c  serd-sort.c  serd-validate.c  serdi.c
(+703 files in other folders)
